@@ -1,5 +1,12 @@
 2019-11-11 John Darrington <john@darrington.wattle.id.au>
 
+	* src/pk-repl.c (pk_repl): Use ~/.poke_history to persist repl
+	commands.
+	* doc/poke.texi (The REPL): Document the use of readline and the
+	poke_history file.
+
+2019-11-11 John Darrington <john@darrington.wattle.id.au>
+
         * doc/poke.texi (The REPL): Fix typo
 
 2019-11-11  Jose E. Marchesi  <jemarch@gnu.org>
